docs: fixed alignment

--- a/cv.css
+++ b/cv.css
@@ -1,4 +1,4 @@
-body {
+﻿body {
   margin: 20px;
   font-family: "Helvetica, Sans-Serif";
   font-size: 16px;
@@ -12,8 +12,7 @@ header img {
     border-radius: 40%; /*настройки аватарки*/
     max-width: 350px;
     margin: 10px 20px 0 0;
-    float: right;
-    position: fixed;
+    float: right
   }
 
 #objective p {
